--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,14 @@
 /* Styling for map window */
+#stateCard{
+    max-height: 500px;
+}
+#worldCard{
+    max-height: 500px;
+    overflow-y: auto;
+}
 .map{
-    width: 100%;
-    height: 600px;
+    width:100%;
+    height: 400px;
     border-style: solid;
     border-color: black;
 }
@@ -11,3 +18,18 @@
 }
 
 /* Styling for index.html goes HERE */
+.container{
+    margin-top: 3em;
+}
+#containerRow_2{
+    margin-top: 3em;
+}
+
+th, td, tr{
+    text-align: center;
+}
+
+.thead{
+    min-width: 100%;
+    background-color: lightgrey;
+}
